define main js file

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "material-icon-vue-svgicon",
   "version": "3.0.1",
   "description": "Icons from https://google.github.io/material-design-icons/",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "svg": "vsvg -s ./src/ -t ./dist/ --es6"
 },
